--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "jest --testTimeout=10000"
+    "test": "jest --testTimeout=10000",
+    "build": "echo 'No build step for backend'"
   },
   "keywords": [],
   "author": "",
